TC-231 - fixing registration modal position on ios

--- a/css/theme.css
+++ b/css/theme.css
@@ -881,6 +881,10 @@ a.list-group-item.active:focus {
 }
 .modal {
   border: none;
+  overflow: visible !important;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 .modal h1,
 .modal h2,
